style.css
#head-container {
    padding: 5em;
    text-align: center;
}

#header-title-id {
    color: lightblue;
    text-shadow: 5px 3px red;
    font-size: 5em;
}

#sub-header-title-id {
    margin-top: 0.4em;
    color: lightblue;
    font-size: 3em;
}

#info-container {
    display: flex;
    justify-content: center;
}

#info {
    text-align: left;
}

#displays {
    color: rgba(255, 255, 190, 255);
    margin: 3em;
    line-height: 1.2em;
}

